# attack2jira

./: .gitignore  README.md  attack2jira.py  pyproject.toml  requirements.txt
lib/: boardhandler.py  jirahandler.py
lib/tests/: test_boardhandler.py
