[tool.poetry]
name = "attack2jira"
version = "0.1.0"
description = "attack2jira automates the process of standing up a Jira environment that can be used to track and measure ATT&CK coverage"
authors = ["Mauricio Velazco"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
